fix incorrect alignemtn of threshold

--- a/myBack.css
+++ b/myBack.css
@@ -59,16 +59,13 @@ body {
 	position:fixed;
 	bottom:1000px;
 	left: 50%;
-	top: 50%;
 	margin-top:8px;
 	transform:translateX(-50%) translateY(-50%);
 	z-index:8;
 }
 
 #log {
-	height:100%;
 	position:fixed;
-	bottom:200px;
 	top: 50%;
 	transform:translateX(-50%) translateY(-50%);
 	left:-100%;
